fix spacing

--- a/src/sections/blog/blogPostBody/blogPostBody.module.css
+++ b/src/sections/blog/blogPostBody/blogPostBody.module.css
@@ -85,7 +85,7 @@
 }
 
 .blogPostContent p {
-  margin: 2rem 0;
+  padding: 2rem 0;
   font-size: 2rem;
   line-height: 140%;
 }
