--- a/src/sections/dashboard/reviewBody/reviewBody.module.css
+++ b/src/sections/dashboard/reviewBody/reviewBody.module.css
@@ -49,7 +49,7 @@
 }
 
 .editorWrapper p {
-  margin: 2rem 0;
+  padding: 2rem 0;
   line-height: 140%;
 }
 
